# pipelineiq

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
analytics/: README.md
dashboard/: app.py
docs/: project-overview.md
pipelines/: run_pipeline.py
src/pipelineiq/: __init__.py  data_quality.py  funnel_metrics.py  recommendations.py  synthetic_data.py
tests/: test_data_quality.py  test_funnel_metrics.py  test_recommendations.py  test_synthetic_data.py
