[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelineiq"
version = "0.1.0"
description = "Lead-to-revenue analytics portfolio project with realistic synthetic CRM data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PipelineIQ" }]
dependencies = [
  "duckdb>=1.2.0",
  "pandas>=2.2.0",
  "streamlit>=1.42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
